# deploy

./: AGENTS.md  README.md  REFACTORING.md  apache-restart  apache_restart  collect_domains  create-project  deploy  deploy.py  manage-wsgi  manage_project  minebackup  pip_and_pull  pull_force  pyproject.toml
.ssh/: codex  codex.pub
docs/: 01-installation-and-bootstrap.md  02-testing-and-safe-generation.md  03-site-lifecycle.md  04-site-types.md  05-adopting-legacy-sites.md  README.md  operations.md  projects-format.md  refactored_config.py  todo.md  usage.md
src/deploy/: __init__.py  apache.py  apache_bootstrap.py  apache_state.py  cli.py  command_common.py  command_handlers.py  errors.py  fs.py  gitops.py  models.py  output.py  project_store.py  runner.py  runtime.py  settings.py  source_backed.py  systemd.py
tests/: test_apache.py  test_bootstrap.py  test_cli.py  test_gitops.py  test_models.py  test_runner.py  test_source_backed.py  test_store.py
