[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deploy"
version = "1.0.2"
description = "Apache deployment management tool"
readme = "REFACTORING.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
]

[project.scripts]
deploy = "deploy.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deploy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
